<resources>
    <string name="app_name">POO_Formulario</string>
    <string name="titulo_menu">Bienvenido al test de Higiene del Sueño</string>
<<<<<<< HEAD
    <string name="continuar">Continuar</string>
    <string name="siempre">Siempre</string>
    <string name="a_veces">A veces</string>
    <string name="frecuentemente">Frecuentemente</string>
    <string name="nunca">Nunca</string>
    <string name="raras_veces">Raras veces</string>
    <string name="next">Continuar</string>
    <string name="previus">Anterior</string>
    <string name="p1">En las noches vas a distintas horas a la cama </string>
    <array name="rptas">
        <item>Siempre</item>
        <item>Frecuentemente</item>
        <item>A veces</item>
        <item>Rara vez</item>
        <item>Nunca</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

=======
>>>>>>> 5fcdc0ed3ba9c7b247526042dd4980241a6120c2
    <string name="btn_starTest">INICIAR TEST</string>
    <string name="btn_admin">¿Eres administrador?</string>

<!--Para el menú de admins-->
    <string name="txt_titulo_adm">BIENVENIDO A LA ZONA DE TRABAJO</string>
    <string name="username_adm">Usuario:</string>
    <string name="txt_userName_adm">Ingrese el nombre de usuario</string>
    <string name="password_adm">Contraseña:</string>
    <string name="txt_userPassword_adm">Ingrese la contraseña</string>
    <string name="btn_login_adm">INGRESAR</string>
<<<<<<< HEAD
=======

>>>>>>> 5fcdc0ed3ba9c7b247526042dd4980241a6120c2

</resources>